[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-leak"
version = "0.1.0"
description = "A placeholder package for testing"
authors = [{ name = "Pranesh Shrestha", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools]
packages = ["secret_leak"]
package-dir = {"" = "src"}
